fixed vertical align

--- a/styles.css
+++ b/styles.css
@@ -11,11 +11,16 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: flex-start;
+	align-items: center;
 }
 
 .flex-wrapper {
 	background-color: lightyellow;
 	margin: 1px;
+}
+
+.flex-wrapper ul {
+	margin: 0;
 }
 
 .header__nav, 
